// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "height": "100%",
      "margin": 0,
      "padding": 0,
      "width": "100%",
    }
  }
>
  <RCTSafeAreaView
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "margin": 0,
        "padding": 0,
        "width": "100%",
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "aspectRatio": 2.7985865724381624,
          "flex": 0.25,
          "marginBottom": "10%",
          "marginTop": 20,
          "width": "100%",
        }
      }
    />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 32,
          "fontWeight": "600",
        }
      }
    >
      Waste Watcher
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 24,
          "marginBottom": "10%",
        }
      }
    >
      Track n' Reduce Food Waste
    </Text>
    <TextInput
      cursorColor="white"
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#fff"
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <TextInput
      cursorColor="white"
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#fff"
      secureTextEntry={true}
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "borderWidth": 3,
            "height": 50,
            "justifyContent": "space-evenly",
            "margin": 8,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 15,
            "fontWeight": "bold",
          }
        }
      >
        Log In
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 30,
            "justifyContent": "center",
            "marginTop": 3,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Forgot your login details? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Get help signing in.
        </Text>
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
          "marginBottom": 15,
          "marginTop": 15,
        }
      }
    >
      OR
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.25)",
          "borderRadius": 7,
          "flexDirection": "row",
          "fontSize": 15,
          "height": 50,
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text />
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "bold",
            "paddingLeft": 8,
          }
        }
      >
        Sign in with Google
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 10,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Dont have an account? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Sign up
        </Text>
      </Text>
    </View>
  </RCTSafeAreaView>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 2`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignSelf": "flex-start",
              "borderRadius": 14,
              "margin": 10,
              "marginTop": 40,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 40,
              "paddingBottom": 20,
              "paddingLeft": 25,
              "paddingRight": 25,
              "paddingTop": 20,
            }
          }
        >
          ×
        </Text>
      </View>
      <Text
        style={
          {
            "alignItems": "center",
            "color": "white",
            "fontSize": 35,
            "justifyContent": "center",
          }
        }
      >
        Forgot Password?
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 15,
            "marginBottom": 15,
            "marginTop": 80,
            "width": "80%",
          }
        }
      >
        Please enter your email and we'll send you an email with a link to reset your password.
      </Text>
      <TextInput
        cursorColor="white"
        onChangeText={[Function]}
        onEndEditing={[Function]}
        placeholder="example@gmail.com"
        placeholderTextColor="#fff"
        selectionColor="white"
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "fontSize": 15,
              "height": 50,
              "marginBottom": 8,
              "paddingLeft": 15,
              "width": "85%",
            },
            {
              "color": "#fff",
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignItems": "center",
              "borderColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "borderWidth": 3,
              "height": 50,
              "justifyContent": "space-evenly",
              "margin": 8,
              "width": "85%",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          Reset Password
        </Text>
      </View>
    </View>
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "space-evenly",
      "marginBottom": "2%",
      "marginTop": "0%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": "5%",
        "justifyContent": "space-between",
        "width": "88%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#0066ff",
          "fontSize": 28,
          "fontWeight": "400",
        }
      }
    >
      Home
    </Text>
    <Image
      source={1}
      style={
        {
          "aspectRatio": 6.683937823834197,
          "height": "auto",
          "justifyContent": "flex-end",
          "tintColor": "#0066ff",
          "width": "65%",
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "elevation": 1,
        "height": "30%",
        "padding": 15,
        "shadowColor": "#0066ff",
        "shadowOffset": {
          "height": 7,
          "width": -7,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#0066ff",
          "fontSize": 20,
          "fontWeight": "500",
        }
      }
    >
      This Weeks Insights
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingVertical": 10,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "width": "30%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "backgroundColor": "rgba(0,0,0,0)",
              },
              {
                "alignItems": "center",
                "height": "100",
                "justifyContent": "center",
                "width": "100",
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              {
                "height": 60,
                "tintColor": "#ff6600",
                "width": 60,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "marginTop": 5,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "width": "100%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0066ff",
                    "fontSize": 15,
                    "fontWeight": "700",
                  }
                }
              >
                0
                 
              </Text>
              <Text
                style={
                  {
                    "color": "#0066ff",
                    "fontSize": 15,
                    "fontWeight": "700",
                  }
                }
              >
                Day
              </Text>
            </View>
            <View
              style={{}}
            >
              <Text
                style={
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "500",
                  }
                }
              >
                Streak
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "height": "90%",
            "justifyContent": "space-between",
            "marginLeft": "1.5%",
            "width": "69.5%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={1}
            style={
              {
                "height": 30,
                "marginRight": 12,
                "tintColor": "#1a75ff",
                "transform": [
                  {
                    "scaleX": -1,
                  },
                ],
                "width": 30,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "marginTop": 5,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "paddingBottom": 3,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0066ff",
                    "fontSize": 15,
                    "fontWeight": "600",
                  }
                }
              >
                0.00
                 lbs
              </Text>
              <Text
                style={
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "400",
                  }
                }
              >
                 of Food Waste
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={1}
            style={
              {
                "height": 30,
                "marginRight": 12,
                "tintColor": "#1a75ff",
                "transform": [
                  {
                    "scaleX": -1,
                  },
                ],
                "width": 30,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "marginTop": 5,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "paddingBottom": 3,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0066ff",
                    "fontSize": 15,
                    "fontWeight": "600",
                  }
                }
              >
                $
                0.00
                 
              </Text>
              <Text
                style={
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "400",
                  }
                }
              >
                 Wasted on Food
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={1}
            style={
              {
                "height": 30,
                "marginRight": 12,
                "tintColor": "#1a75ff",
                "transform": [
                  {
                    "scaleX": -1,
                  },
                ],
                "width": 30,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "marginTop": 5,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "paddingBottom": 3,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0066ff",
                    "fontSize": 15,
                    "fontWeight": "600",
                  }
                }
              >
                0.00
                 lbs
              </Text>
              <Text
                style={
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "400",
                  }
                }
              >
                 of GHG Emissions
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "elevation": 1,
        "height": "58%",
        "justifyContent": "space-evenly",
        "position": "relative",
        "shadowColor": "#0066ff",
        "shadowOffset": {
          "height": 7,
          "width": -7,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#0066ff",
          "fontSize": 20,
          "fontWeight": "500",
        }
      }
    >
      Track Daily Food Waste
    </Text>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#1a75ff",
          "borderColor": "#1a75ff",
          "borderRadius": 12,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": "10%",
          "textAlign": "center",
          "width": "90%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "fontSize": 15,
            "justifyContent": "center",
            "width": "40%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          Date
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 10,
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "paddingHorizontal": 20,
            "width": "60%",
          }
        }
      >
        <TextInput
          color="#474747"
          cursorColor="#474747"
          keyboardType="numeric"
          onChangeText={[Function]}
          placeholder="04"
          placeholderTextColor="#474747"
          returnKeyType="done"
          style={
            {
              "backgroundColor": "rgba(0,0,0,0)",
              "fontSize": 15,
              "fontWeight": "500",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          textAlign="center"
        >
          <Text
            style={
              {
                "color": "#474747",
                "fontSize": 15,
                "fontWeight": "500",
              }
            }
          />
        </TextInput>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 15,
              "fontWeight": "500",
              "paddingHorizontal": 10,
            }
          }
        >
          /
        </Text>
        <TextInput
          color="#474747"
          cursorColor="#474747"
          keyboardType="numeric"
          onChangeText={[Function]}
          placeholder="11"
          placeholderTextColor="#474747"
          returnKeyType="done"
          style={
            {
              "backgroundColor": "rgba(0,0,0,0)",
              "fontSize": 15,
              "fontWeight": "500",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          textAlign="center"
        >
          <Text
            style={
              {
                "color": "#474747",
                "fontSize": 15,
                "fontWeight": "500",
              }
            }
          />
        </TextInput>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#1a75ff",
          "borderColor": "#1a75ff",
          "borderRadius": 12,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": "10%",
          "justifyContent": "center",
          "textAlign": "center",
          "width": "90%",
          "zIndex": 7,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "fontSize": 15,
            "justifyContent": "center",
            "width": "40%",
            "zIndex": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          Weight
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 10,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "paddingLeft": 10,
            "width": "60%",
            "zIndex": 3,
          }
        }
      >
        <TextInput
          color="#474747"
          cursorColor="#474747"
          keyboardType="numeric"
          onChangeText={[Function]}
          placeholder="0"
          placeholderTextColor="#474747"
          returnKeyType="done"
          style={
            {
              "fontSize": 15,
              "fontWeight": "500",
              "height": "90%",
              "width": "30%",
            }
          }
          textAlign="center"
        >
          <Text
            style={
              {
                "backgroundColor": "#fff",
                "color": "#474747",
                "fontSize": 15,
                "fontWeight": "500",
              }
            }
          />
        </TextInput>
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "rgba(0,0,0,0)",
                "borderRadius": 0,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 0,
                "paddingLeft": 0,
                "paddingVertical": 4,
                "width": "95%",
                "zIndex": 4,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": undefined,
                  },
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "500",
                  },
                ]
              }
            >
              Select option
            </Text>
            <Text />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#1a75ff",
          "borderColor": "#1a75ff",
          "borderRadius": 12,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": "10%",
          "justifyContent": "center",
          "textAlign": "center",
          "width": "90%",
          "zIndex": 3,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "fontSize": 15,
            "justifyContent": "center",
            "width": "40%",
            "zIndex": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          Type
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#fff",
            "borderRadius": 10,
            "width": "60%",
            "zIndex": 3,
          }
        }
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(0,0,0,0)",
                "borderColor": "rgba(0,0,0,0)",
                "borderRadius": 0,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 0,
                "paddingLeft": 0,
                "paddingVertical": 4,
                "width": "100%",
                "zIndex": 4,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": undefined,
                  },
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "500",
                    "paddingLeft": 10,
                  },
                ]
              }
            >
              Select option
            </Text>
            <Text />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#1a75ff",
          "borderColor": "#1a75ff",
          "borderRadius": 12,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": "10%",
          "justifyContent": "center",
          "textAlign": "center",
          "width": "90%",
          "zIndex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "fontSize": 15,
            "justifyContent": "center",
            "width": "55%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          Is the food edible?
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 10,
            "justifyContent": "center",
            "paddingHorizontal": 20,
            "width": "45%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          fillColor="#474747"
          focusable={true}
          innerIconStyle={
            {
              "borderRadius": 7,
              "borderWidth": 1.9,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          size={20}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
              },
              {},
            ]
          }
          text="Yes"
          textStyle={
            {
              "color": "#474747",
              "fontSize": 15,
              "fontWeight": "500",
              "marginLeft": -3,
              "textDecorationLine": "none",
            }
          }
          unfillColor="#fff"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 10,
                "height": 20,
                "justifyContent": "center",
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 20,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderColor": "#474747",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "height": 20,
                    "justifyContent": "center",
                    "width": 20,
                  },
                  {
                    "borderRadius": 7,
                    "borderWidth": 1.9,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              [
                {
                  "marginLeft": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#757575",
                    "fontSize": 16,
                    "textDecorationLine": "none",
                  },
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "500",
                    "marginLeft": -3,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Yes
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#fff",
          "borderColor": "#1a75ff",
          "borderRadius": 12,
          "borderWidth": 2,
          "flexDirection": "row",
          "height": "10%",
          "justifyContent": "center",
          "textAlign": "center",
          "width": "90%",
          "zIndex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "justifyContent": "center",
            "paddingHorizontal": 20,
            "width": "45%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          fillColor="#474747"
          focusable={true}
          innerIconStyle={
            {
              "borderRadius": 7,
              "borderWidth": 1.9,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          size={20}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
              },
              {},
            ]
          }
          text="Restaurants"
          textStyle={
            {
              "color": "#474747",
              "fontSize": 15,
              "fontWeight": "500",
              "marginLeft": -3,
              "textDecorationLine": "none",
            }
          }
          unfillColor="#fff"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 10,
                "height": 20,
                "justifyContent": "center",
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 20,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderColor": "#474747",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "height": 20,
                    "justifyContent": "center",
                    "width": 20,
                  },
                  {
                    "borderRadius": 7,
                    "borderWidth": 1.9,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              [
                {
                  "marginLeft": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#757575",
                    "fontSize": 16,
                    "textDecorationLine": "none",
                  },
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "500",
                    "marginLeft": -3,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Restaurants
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 10,
            "justifyContent": "center",
            "paddingHorizontal": 20,
            "width": "45%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          fillColor="#474747"
          focusable={true}
          innerIconStyle={
            {
              "borderRadius": 7,
              "borderWidth": 1.9,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          size={20}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
              },
              {},
            ]
          }
          text="Home"
          textStyle={
            {
              "color": "#474747",
              "fontSize": 15,
              "fontWeight": "500",
              "marginLeft": -3,
              "textDecorationLine": "none",
            }
          }
          unfillColor="#fff"
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderRadius": 10,
                "height": 20,
                "justifyContent": "center",
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 20,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderColor": "#474747",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "height": 20,
                    "justifyContent": "center",
                    "width": 20,
                  },
                  {
                    "borderRadius": 7,
                    "borderWidth": 1.9,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              [
                {
                  "marginLeft": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#757575",
                    "fontSize": 16,
                    "textDecorationLine": "none",
                  },
                  {
                    "color": "#474747",
                    "fontSize": 15,
                    "fontWeight": "500",
                    "marginLeft": -3,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "height": "10%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "#ff6600",
            },
            {
              "alignItems": "center",
              "borderRadius": 12,
              "height": "100%",
              "justifyContent": "center",
              "marginRight": "5%",
              "padding": 10,
              "width": "32%",
              "zIndex": 0,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 17,
              "fontWeight": "600",
            }
          }
        >
          Submit
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "#ff6600",
            },
            {
              "alignItems": "center",
              "borderRadius": 12,
              "height": "100%",
              "justifyContent": "center",
              "marginLeft": "5%",
              "padding": 10,
              "width": "48%",
              "zIndex": 0,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 17,
              "fontWeight": "600",
            }
          }
        >
          Nothing Today!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 4`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 0,
        "elevation": 10,
        "height": "20%",
        "justifyContent": "center",
        "marginBottom": 20,
        "marginTop": "0%",
        "shadowColor": "#1a75ff",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": "2.5%",
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 50,
            "tintColor": "#000",
            "width": 50,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 20,
          "fontWeight": "bold",
          "marginVertical": "1%",
        }
      }
    >
      loading...
    </Text>
    <Text
      style={
        {
          "color": "#262626",
          "fontSize": 16,
          "marginBottom": "5%",
        }
      }
    >
      loading...
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "height": "100%",
        "marginTop": "5%",
        "width": "100%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "15%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "10%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 33,
              "tintColor": "#000",
              "width": 33,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Friends
        </Text>
        <Text
          style={
            {
              "color": "#262626",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          View and invite friends
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "15%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "10%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 33,
              "tintColor": "#000",
              "width": 33,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Dark Mode
        </Text>
        <Text
          style={
            {
              "color": "#262626",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Change app appearance
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "15%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "10%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 33,
              "tintColor": "#000",
              "width": 33,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Change Password
        </Text>
        <Text
          style={
            {
              "color": "#262626",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Reset your password
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "15%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "10%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 33,
              "tintColor": "#000",
              "width": 33,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Refer a Friend
        </Text>
        <Text
          style={
            {
              "color": "#262626",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Connect and track together
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "#fff",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "15%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "10%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 33,
              "tintColor": "#000",
              "width": 33,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Sign out
        </Text>
      </View>
    </View>
  </View>
</View>
`;
